Move to JDK 21 and remove deprecated items
* Applets
* Class.newInstance
* Synchronizing on new Integer